--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <p class="section__text__p1">Get to know more</p>
+        <h1 class="title">Sobre Mim</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about.png" alt="Profile picture" class="about-pic">
+            </div>
+            
+            <div class="about-details-container">
+                <div class="about-container">
+                    <div class="about-details-container">
+                        <img src="./assets/experience.png" alt="Experience icon" class="icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
