--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Oi ! Eu sou o Ivan Biane, mas pode me tratar por constante B, sou um desenvolvedor web iniciante, técnico médio em gestão logística e aduaneira e estudante finalista do curso de Engenharia Informática de Telecomunicações pela Universidade Politécnica no Instituto Superior de gestão, Ciência e Tecnologia.</p>
+                    <p>Oi ! Eu sou o Ivan Biane, mas pode me tratar por <strong>cons B</strong>, sou um desenvolvedor web iniciante, técnico médio em gestão logística e aduaneira e estudante finalista do curso de Engenharia Informática de Telecomunicações pela Universidade Politécnica no Instituto Superior de gestão, Ciência e Tecnologia.</p>
                 </div>
             </div>
         </div>
